kubernetes/manifests/20-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: restapi-flask
  name: restapi-flask
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restapi-flask
  strategy: {}
  template:
    metadata:
      labels:
        app: restapi-flask
        restartedAt: "2026_03_04T18_03"
    spec:
      containers:
      - image: restapi-flask:v6
        name: restapi-flask
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
        resources: {}
status: {}
