kubernetes/manifests/40.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restapi-flask-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: api.localhost.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: restapi-flask
            port:
              number: 5000
